# FusionDetect3D_Message

./: CMakeLists.txt  package.xml
msg/car/: CarEncoderData.msg  CarMotionControl.msg  CarServoData.msg  CarVotageData.msg
msg/imu/: ImuAngularVelocity.msg  ImuData.msg  ImuDataFrame.msg  ImuMagneticField.msg  ImuQuaternion.msg
msg/lidar/: LidarData.msg  LidarDataFrame.msg
msg/mode/: ModeControl.msg
